--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,10 @@ target 'VehicleAuthorizer' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'TextToSpeech', :path => '../node_modules/react-native-tts'
+
   target 'VehicleAuthorizerTests' do
     inherit! :complete
     # Pods for testing
